2007-12-24  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/: Support --groups option.

	* ipmi-sensors/: Fix corner case output w/ --list-groups.
	
2007-12-24  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/: Fix several corner case outputs.
	
2007-12-24  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-argp.c,
	ipmi-sensors/src/ipmi-sensors.h, ipmi-sel/src/ipmi-sel-argp.c,
	ipmi-sel/src/ipmi-sel.h: Cleanup arg parsing.

2007-12-23  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors.8.pre.in,
	ipmimonitoring/ipmimonitoring.8.pre.in: Minor doc fixes/updates.

	* common/src/tool-common.c (ipmi_open): Check for "127.0.0.1" as
	well as "localhost".
	
2007-12-21  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-troubleshooting.man: Remove "Please
	try ..." in a few troubleshooting sections, since it makes no
	sense in some.
	
2007-12-21  Albert Chu <chu11@llnl.gov>

	* common/src/hostlist.c: Update to newest library to support
	suffixes on hostranges.
	
2007-12-19  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_config.c (cmdline_parse): Fix cmdline
	parsing bug.
	
2007-12-19  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-troubleshooting.man: Tweak "password
	verification timeout" troubleshooting.
	
2007-12-18  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Use %{version} instead of @VERSION@.
	
2007-12-14  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Fix for libfreeipmi reorg.
	
2007-12-14  Albert Chu <chu11@llnl.gov>

	Major code reorganization and code cleanup from branch
	libfreeipmi_rearch_branch.

	* configure.ac: Require automake 1.9, support long filenames.

	* config/: New directory.  Move .m4 files in this directory.

	* autogen.sh, configure.ac: Update for new config directory.

	* common/src/ipmi-sensor-api.c (system_software_type_desc):
	Removed unused array of strings.

	* common/src/ipmi-sensor-api.c: Add debugging via debug parameter.
	Use internal wrapper functions rather than library wrapper
	functions.
