@@ -60,10 +60,10 @@
 #include "freeipmi/record-format/ipmi-sdr-record-format.h"
 
 #include "freeipmi-portability.h"
-#include "string-utils.h"
 
 #include "ipmi-sdr-cache.h"
 #include "ipmi-sdr-cache-defs.h"
+#include "ipmi-sdr-cache-utils.h"
 
 #define GET_INT_VALUE_BY_KEY(__ctx, __cache_record, __key, __i) \
 do 							        \
