@@ -81,12 +81,12 @@
 #include "freeipmi/util/ipmi-sensor-util.h"
 
 #include "freeipmi-portability.h"
-#include "string-utils.h"
 
 #include "ipmi-sdr-cache.h"
 #include "ipmi-sdr-cache-defs.h"
 #include "ipmi-sdr-cache-writes.h"
 #include "ipmi-sdr-cache-reads.h"
+#include "ipmi-sdr-cache-utils.h"
 
 static char * sdr_cache_ctx_errmsg[] =
   {
